# minecraft-relay-server

./: CMakeLists.txt  Makefile  README.md  loglevel.info  mcrelay  mcrelay.c  mcrelay.conf.example  mcrelay.service.example  mcrelay.service.forking.example  mcrelay.service.simple.example  version.json
.github/workflows/: release.yml
doc/: versions.json
examples/config/: config.json
examples/systemd/: mcrelay.service.forking  mcrelay.service.simple
mod/: basic.h  config.h  config2.h  main.h  misc.h  network.h  network2.h  proto_legacy.h  proto_modern.h
mod/linux/: basic.c  config.c  config2.c  main.c  misc.c  network.c  network2.c  proto_legacy.c  proto_modern.c
modules/: basic.h  config.h  log.h  main.h  misc.h  network.h  proto_legacy.h  proto_modern.h
modules/linux/: basic.c  config.c  log.c  main.c  misc.c  network.c  proto_legacy.c  proto_modern.c
src/: basic.c  basic.h  config.c  config.h  defines.h  log.c  log.h  main.c  misc.c  misc.c.old  misc.h  network.c  network.h  proto_legacy.c  proto_legacy.h  proto_modern.c  proto_modern.h  proto_proxy.c  proto_proxy.h
src/protocols/: common.c  common.h  handshake.c  handshake.h  handshake_legacy.c  handshake_legacy.h  proxy.c  proxy.h
